<resources>
    <string name="app_name">HMF</string>
    <string name="exit_tip">再按一次返回键退出</string>

    <!-- Error View -->
    <string name="error_network_msg">网络连接出错</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无内容</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败\r\n点击重新加载</string>
    <string name="error_view_network_error_click_to_refresh">没有可用的网络</string>

    <!-- login -->
    <string name="login_btn_str">登陆</string>
    <string name="login_other_method">第三方账号登陆</string>
    <string name="login_username">账号</string>
    <string name="login_password">密码</string>
    <string name="login_username_hint">手机号/邮箱</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_forget_password">忘记密码?</string>
    <string name="edit_phone">输入手机号</string>
    <string name="verification_code">验证码</string>
    <string name="edit_verification_code">输入短信验证码</string>
    <string name="get_verification_code">获得验证码</string>
    <string name="regist_password_hint">请输入6-20位字母或数字</string>



</resources>
